--- a/GUI/package.json
+++ b/GUI/package.json
@@ -13,16 +13,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.2",
-    "@angular/common": "7.2.2",
-    "@angular/compiler": "7.2.2",
-    "@angular/core": "7.2.2",
-    "@angular/forms": "7.2.2",
+    "@angular/animations": "8.2.14",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "8.2.14",
     "@angular/http": "7.2.2",
-    "@angular/platform-browser": "7.2.2",
-    "@angular/platform-browser-dynamic": "7.2.2",
-    "@angular/platform-server": "7.2.2",
-    "@angular/router": "7.2.2",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/platform-server": "8.2.14",
+    "@angular/router": "8.2.14",
     "@ng-bootstrap/ng-bootstrap": "4.0.2",
     "ajv": "6.7.0",
     "ajv-keywords": "3.3.0",
@@ -45,13 +45,13 @@
     "rxjs": "^6.3.3",
     "tslib": "^1.9.3",
     "web-animations-js": "2.3.1",
-    "zone.js": "^0.8.29"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.3",
-    "@angular/cli": "7.2.3",
-    "@angular/compiler-cli": "7.2.2",
-    "@angular/language-service": "7.2.2",
+    "@angular-devkit/build-angular": "~0.803.20",
+    "@angular/cli": "^8.3.20",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/language-service": "8.2.14",
     "@types/bootstrap": "4.2.1",
     "@types/chartist": "0.9.43",
     "@types/googlemaps": "3.30.16",
@@ -69,6 +69,6 @@
     "protractor": "5.4.2",
     "ts-node": "8.0.2",
     "tslint": "5.12.1",
-    "typescript": "3.2.4"
+    "typescript": "3.5.3"
   }
 }
