Continued working on design

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,12 +22,12 @@
     "@clr/angular": "^2.3.5",
     "@clr/icons": "2.3.5",
     "@clr/ui": "2.3.5",
+    "@sweetalert2/ngx-sweetalert2": "^7.4.0",
     "@types/jquery": "^3.3.31",
-    "@types/sweetalert": "^2.0.4",
     "@webcomponents/custom-elements": "^1.0.0",
     "jquery": "^3.4.1",
     "rxjs": "~6.5.4",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^9.7.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
