--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,15 +20,16 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "@clr/angular": "^3.0.0",
+    "@clr/core": "^3.0.0",
     "@clr/icons": "3.0.0",
     "@clr/ui": "3.0.0",
     "@sweetalert2/ngx-sweetalert2": "^7.4.0",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "angular-user-idle": "^2.2.1",
     "rxjs": "~6.5.4",
     "sweetalert2": "^9.7.2",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "@clr/core": "^3.0.0",
-    "@webcomponents/webcomponentsjs": "^2.0.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.2",
