Settings pages, user idle

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,9 +23,11 @@
     "@clr/core": "^3.0.0",
     "@clr/icons": "3.0.0",
     "@clr/ui": "3.0.0",
+    "@ng-idle/core": "^8.0.0-beta.4",
+    "@ng-idle/keepalive": "^8.0.0-beta.4",
     "@sweetalert2/ngx-sweetalert2": "^7.4.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
-    "angular-user-idle": "^2.2.1",
+    "angular2-moment": "^1.9.0",
     "rxjs": "~6.5.4",
     "sweetalert2": "^9.7.2",
     "tslib": "^1.10.0",
