--- a/Backend/src/main/webapp/WEB-INF/web.xml
+++ b/Backend/src/main/webapp/WEB-INF/web.xml
@@ -18,5 +18,11 @@
     <servlet-mapping>
         <servlet-name>Jersey Web Application</servlet-name>
         <url-pattern>/api/*</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>   
+    <resource-ref>
+        <description>JDBC Connection Pool</description>
+        <res-ref-name>jdbc/gfosAward</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 </web-app>
