--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
         <!-- uncomment this to get JSON support
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
